Simplify invoice validator
