# internal/entity/language.go
@@ -1,8 +1,0 @@
-package entity
-
-const (
-	EnglishLanguage  = "en"
-	SlovakLanguage = "sk"
-)
-
-var Languages = []string{EnglishLanguage, SlovakLanguage}
